--- a/grid.html
+++ b/grid.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div><a href="/">Flex</a></div>
+        <div><a href="index.html">Flex</a></div>
         <div><a href="/">Grid</a></div>
     </header>
 </body>
