--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div><a href="/">Flex</a></div>
-        <div><a href="/">Grid</a></div>
+        <div><a href="grid.html">Grid</a></div>
     </header>
 
     <main>
