--- a/grid.html
+++ b/grid.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -12,5 +13,14 @@
         <div><a href="index.html">Flex</a></div>
         <div><a href="/">Grid</a></div>
     </header>
+
+    <main class="grid">
+        <div class="one"></div>
+        <div class="two"></div>
+        <div class="three"></div>
+        <div class="four"></div>
+        <div class="five"></div>
+        <!-- <div class="six"></div> -->
+    </main>
 </body>
 </html>
